work in progress settings for themes
remove unnecessary file

remove unused map

delete unneeded files

adjust baseline grid colours and apply tyo html element

themify hr

add p-search-box to theme serttings file

create dark nav example file

wip: theme color maps

wip: themefy nav

remove search box from default example, as there already is a nav example with search

remove type=['submit'] selector;
It has very high specificity and is difficult to override

move input margin bottom variable to settings file so it can be used in searchbox pattern

themify nav & search box; fix focus state overlaps and button icon positioning

change is-light to is-white

flip themes

 fix ci errors

remove unused file

ifx ci error

fix inline lists containing block elements

fix chevron icon

revert is-white to is-light as it was a too wide search and replace

fix pagination height to be equal to other form elements like buttons and inputs

fix search box buttons on mobile

fix example

remove baseline grid background

update logo

fix button content alignment on small screens

remove unnecessary p's  wraping buttons

remove unnecesary markup

fix accordion

--- a/docs/examples/templates/external-links.html
+++ b/docs/examples/templates/external-links.html
@@ -9,11 +9,11 @@ category: _templates
     <div class="col-12">
       <p><a href="#">Link</a></p>
       <p><a class="p-link--external">External link</a></p>
-      <p><a class="p-button"><span class="p-link--external">External button</span></a></p>
-      <p><a class="p-button--positive"><span class="p-link--external">External positive button</span></a></p>
-      <p><a class="p-button--negative"><span class="p-link--external">External negative button</span></a></p>
-      <p><a class="p-button--neutral"><span class="p-link--external">External neutral button</span></a></p>
-      <p><a class="p-button--base"><span class="p-link--external">External base button</span></a></p>
+      <a class="p-button"><span class="p-link--external">External button</span></a>
+      <a class="p-button--positive"><span class="p-link--external">External positive button</span></a>
+      <a class="p-button--negative"><span class="p-link--external">External negative button</span></a>
+      <a class="p-button--neutral"><span class="p-link--external">External neutral button</span></a>
+      <a class="p-button--base"><span class="p-link--external">External base button</span></a>
     </div>
   </div>
 </div>
@@ -23,11 +23,11 @@ category: _templates
     <div class="col-12">
       <p><a href="#">Link</a></p>
       <p><a class="p-link--external">External link</a></p>
-      <p><a class="p-button"><span class="p-link--external">External button</span></a></p>
-      <p><a class="p-button--positive"><span class="p-link--external">External positive button</span></a></p>
-      <p><a class="p-button--negative"><span class="p-link--external">External negative button</span></a></p>
-      <p><a class="p-button--neutral"><span class="p-link--external">External neutral button</span></a></p>
-      <p><a class="p-button--base"><span class="p-link--external">External base button</span></a></p>
+      <a class="p-button"><span class="p-link--external">External button</span></a>
+      <a class="p-button--positive"><span class="p-link--external">External positive button</span></a>
+      <a class="p-button--negative"><span class="p-link--external">External negative button</span></a>
+      <a class="p-button--neutral"><span class="p-link--external">External neutral button</span></a>
+      <a class="p-button--base"><span class="p-link--external">External base button</span></a>
     </div>
   </div>
 </section>
@@ -37,11 +37,11 @@ category: _templates
     <div class="col-12">
       <p><a href="#">Link</a></p>
       <p><a class="p-link--external">External link</a></p>
-      <p><a class="p-button"><span class="p-link--external">External button</span></a></p>
-      <p><a class="p-button--positive"><span class="p-link--external">External positive button</span></a></p>
-      <p><a class="p-button--negative"><span class="p-link--external">External negative button</span></a></p>
-      <p><a class="p-button--neutral"><span class="p-link--external">External neutral button</span></a></p>
-      <p><a class="p-button--base"><span class="p-link--external">External base button</span></a></p>
+      <a class="p-button"><span class="p-link--external">External button</span></a>
+      <a class="p-button--positive"><span class="p-link--external">External positive button</span></a>
+      <a class="p-button--negative"><span class="p-link--external">External negative button</span></a>
+      <a class="p-button--neutral"><span class="p-link--external">External neutral button</span></a>
+      <a class="p-button--base"><span class="p-link--external">External base button</span></a>
     </div>
   </div>
 </section>
@@ -51,11 +51,11 @@ category: _templates
     <div class="col-12">
       <p><a href="#">Link</a></p>
       <p><a class="p-link--external">External link</a></p>
-      <p><a class="p-button"><span class="p-link--external">External button</span></a></p>
-      <p><a class="p-button--positive"><span class="p-link--external">External positive button</span></a></p>
-      <p><a class="p-button--negative"><span class="p-link--external">External negative button</span></a></p>
-      <p><a class="p-button--neutral"><span class="p-link--external">External neutral button</span></a></p>
-      <p><a class="p-button--base"><span class="p-link--external">External base button</span></a></p>
+      <a class="p-button"><span class="p-link--external">External button</span></a>
+      <a class="p-button--positive"><span class="p-link--external">External positive button</span></a>
+      <a class="p-button--negative"><span class="p-link--external">External negative button</span></a>
+      <a class="p-button--neutral"><span class="p-link--external">External neutral button</span></a>
+      <a class="p-button--base"><span class="p-link--external">External base button</span></a>
     </div>
   </div>
 </section>
@@ -65,11 +65,11 @@ category: _templates
     <div class="col-12">
       <p><a href="#">Link</a></p>
       <p><a class="p-link--external">External link</a></p>
-      <p><a class="p-button"><span class="p-link--external">External button</span></a></p>
-      <p><a class="p-button--positive"><span class="p-link--external">External positive button</span></a></p>
-      <p><a class="p-button--negative"><span class="p-link--external">External negative button</span></a></p>
-      <p><a class="p-button--neutral"><span class="p-link--external">External neutral button</span></a></p>
-      <p><a class="p-button--base"><span class="p-link--external">External base button</span></a></p>
+      <a class="p-button"><span class="p-link--external">External button</span></a>
+      <a class="p-button--positive"><span class="p-link--external">External positive button</span></a>
+      <a class="p-button--negative"><span class="p-link--external">External negative button</span></a>
+      <a class="p-button--neutral"><span class="p-link--external">External neutral button</span></a>
+      <a class="p-button--base"><span class="p-link--external">External base button</span></a>
     </div>
   </div>
 </section>
@@ -79,11 +79,11 @@ category: _templates
     <div class="col-12">
       <p><a href="#">Link</a></p>
       <p><a class="p-link--external">External link</a></p>
-      <p><a class="p-button"><span class="p-link--external">External button</span></a></p>
-      <p><a class="p-button--positive"><span class="p-link--external">External positive button</span></a></p>
-      <p><a class="p-button--negative"><span class="p-link--external">External negative button</span></a></p>
-      <p><a class="p-button--neutral"><span class="p-link--external">External neutral button</span></a></p>
-      <p><a class="p-button--base"><span class="p-link--external">External base button</span></a></p>
+      <a class="p-button"><span class="p-link--external">External button</span></a>
+      <a class="p-button--positive"><span class="p-link--external">External positive button</span></a>
+      <a class="p-button--negative"><span class="p-link--external">External negative button</span></a>
+      <a class="p-button--neutral"><span class="p-link--external">External neutral button</span></a>
+      <a class="p-button--base"><span class="p-link--external">External base button</span></a>
     </div>
   </div>
 </section>
