--- a/scss/_base_button.scss
+++ b/scss/_base_button.scss
@@ -14,12 +14,13 @@
     border-style: solid;
     border-width: 1px;
     cursor: pointer;
-    display: inline-block;
+    display: inline-flex;
     font-size: 1rem;
     font-weight: 300;
+    justify-content: center;
     line-height: map-get($line-heights, default-text);
     margin: 0 0 $input-margin-bottom 0;
-    padding: calc(#{$spv-nudge} - 1px) $sph-inner--small * 1.5;
+    padding: calc(#{$spv-nudge} - 1px) $sph-inner;
     text-align: center;
     text-decoration: none;
 
