--- a/scss/_patterns_lists.scss
+++ b/scss/_patterns_lists.scss
@@ -30,7 +30,7 @@ $spv-list-item--inner: null;
 
 // Mixin for inline list items
 @mixin vf-inline-list-item {
-  display: inline;
+  display: inline-flex;
   list-style: none;
   margin-right: 1.25rem;
 
