--- a/scss/_patterns_accordion.scss
+++ b/scss/_patterns_accordion.scss
@@ -32,6 +32,7 @@
     background-color: inherit;
     border: 0;
     border-radius: 0;
+    justify-content: flex-start;
     margin-bottom: 0;
     padding-left: $sph-inner + $icon-size + $sph-inner;
     padding-right: $sph-inner;
