--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -250,18 +250,18 @@
         </div>
 
         <hr>
-
+        
         <footer class="p-strip is-shallow" role="contentinfo">
           <div class="p-content__row">
             <div class="col-12">
-              <p>&copy; 2019 Canonical Ltd. Ubuntu and Canonical are registered trademarks of Canonical Ltd.</p>
+              &copy; {{ "now" | date: "%Y" }} Canonical Ltd. Ubuntu and Canonical are registered trademarks of Canonical Ltd.
               <nav>
                 <ul class="p-inline-list--middot">
                   <li class="p-inline-list__item">
                     <a href="https://www.ubuntu.com/legal">Legal info</a>
                   </li>
                   <li class="p-inline-list__item">
-                    <a href="https://github.com/canonical-web-and-design/vanilla-framework/issues/new">Report a bug</a>
+                    <a href="https://github.com/canonical-web-and-design/vanilla-framework/issues/new/choose">Report a bug with this site</a>
                   </li>
                 </ul>
                 <span class="u-off-screen">
