--- a/docs/sass/styles.scss
+++ b/docs/sass/styles.scss
@@ -81,8 +81,7 @@ hr {
 }
 
 .p-sidebar {
-  background-color: $color-light;
-  border-right: $border;
+  background-color: $color-mid-x-light;
   flex: 0 0 18rem;
 
   @supports (position: sticky) {
