Update mobile nav toggle

--- a/docs/sass/styles.scss
+++ b/docs/sass/styles.scss
@@ -261,8 +261,8 @@ hr.is-deep {
 }
 
 .p-sidebar__toggle.is-active {
-  border-bottom: 1px solid $color-light;
-  background-color: $color-light;
+  border-bottom: 1px solid $color-mid-x-light;
+  background-color: $color-mid-x-light;
   z-index: 1;
 
   &:focus {
