--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -238,7 +238,7 @@
         {% if page.homepage %}
         <div class="p-strip--image is-dark" style="background-image: url('https://assets.ubuntu.com/v1/775cc62b-vanilla-grad-background.png'); background-position: 75% 50%;">
           <div class="p-content__row">
-            <h1 class="p-heading--stylized">Vanilla documentation</h1>
+            <h1>Vanilla documentation</h1>
             <p class="p-heading--four">Everything you need to get your project started with Vanilla.</p>
           </div>
         </div>
