add baseline grid background

--- a/docs/_layouts/examples.html
+++ b/docs/_layouts/examples.html
@@ -39,5 +39,25 @@
         });
       }
     </script>
+    <style>
+      html::after {
+        background: linear-gradient(to top, rgba(255,0,0,0.15), rgba(255,0,0,0.15) 1px, rgba(255,0,0,0.05) 1px, rgba(255,0,0,0.05));
+        background-size: 100% .5em;
+        bottom: 0;
+        content: '';
+        display: block;
+        left: 0;
+        pointer-events: none;
+        position: absolute;
+        right: 0;
+        top: 0;
+        z-index: -1;
+      }
+
+      body {
+        background-color: #fff;
+      }
+    </style>
+
   </body>
 </html>
