--- a/scss/_patterns_pagination.scss
+++ b/scss/_patterns_pagination.scss
@@ -47,7 +47,10 @@
     width: auto;
 
     & + & {
-      margin-left: $sph-inner--small;
+      &:not(:nth-child(2)):not(:nth-last-child(1)) {
+        margin-left: $sph-inner--small;
+      }
+
       &:nth-child(2),
       &:nth-last-child(1) {
         margin-left: $sph-outer;
