fix pagination margins and padding to match button inputs etc

--- a/scss/_patterns_pagination.scss
+++ b/scss/_patterns_pagination.scss
@@ -10,7 +10,7 @@
     border-width: 1px;
     color: $color-x-dark;
     display: block;
-    padding: $spv-inner--small $sph-inner;
+    padding: calc(#{$spv-nudge} - 1px) $sph-inner--small * 1.5;
     text-decoration: none;
 
     &.is-disabled {
@@ -58,7 +58,7 @@
     }
 
     &--truncation {
-      margin: 0.3rem $sph-inner 0 $sph-inner--small;
+      padding: calc(#{$spv-nudge} - 1px) 0;
     }
   }
 
