--- a/scss/_patterns_navigation.scss
+++ b/scss/_patterns_navigation.scss
@@ -129,7 +129,7 @@ $nav-border-bottom-thickness: 1px;
     display: flex;
     flex: 0 0 auto;
     height: 3rem;
-    margin: 0;
+    margin: 0 $sph-inner 0 0;
 
     .p-navigation__link {
       display: flex;
@@ -155,7 +155,7 @@ $nav-border-bottom-thickness: 1px;
 
     @media (max-width: $breakpoint-navigation-threshold) {
       flex: 1 0 auto;
-      margin: -1px $grid-margin-width $spv-inner--small $grid-margin-width;
+      margin: -1px 0 $spv-inner--small 0;
       order: -1;
     }
 
@@ -164,7 +164,7 @@ $nav-border-bottom-thickness: 1px;
       $input-gap-top: $spv-inner--medium - $spv-nudge;
       display: flex;
       flex: 1 1 auto;
-      margin: $input-gap-top $sph-inner auto auto;
+      margin: $input-gap-top 0 auto auto;
       max-width: 20rem;
       order: 1;
     }
