add styling for detail element

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -5,6 +5,7 @@
 @import 'base_box-sizing';
 @import 'base_button';
 @import 'base_code';
+@import 'base_details';
 @import 'base_forms';
 @import 'base_hr';
 @import 'base_links';
@@ -24,6 +25,7 @@
   @include vf-b-box-sizing;
   @include vf-b-button;
   @include vf-b-code;
+  @include vf-b-details;
   @include vf-b-forms;
   @include vf-b-hr;
   @include vf-b-links;
