--- a/scss/_base_details.scss
+++ b/scss/_base_details.scss
@@ -1,7 +1,13 @@
 @mixin vf-b-details {
+  details {
+    margin-bottom: $spv-outer--scaleable;
+  }
+
   summary {
     @include vf-focus;
+    @include p-max-width;
     @extend %common-default-text-properties;
+    margin-bottom: $spv-nudge; //push subsequent text onto baseline
     padding-bottom: 2 * $sp-unit - map-get($nudges, nudge--p); // use padding instead of margin-bottom in order to make the focus state symmetric
   }
 }
