adjust label styling (wont reflect until next release). Add md file

--- a/scss/_base_typography.scss
+++ b/scss/_base_typography.scss
@@ -83,6 +83,10 @@
     }
   }
 
+  .p-text--x-small {
+    @extend %x-small-text;
+  }
+
   //@section Adjusted spacing for headings (or a p) following a paragraph
   p:not([class*='p-heading--']):not([class*='p-muted-heading']) {
     & + h1,
