--- a/scss/_patterns_label.scss
+++ b/scss/_patterns_label.scss
@@ -10,11 +10,12 @@
 }
 
 %vf-label {
-  border-radius: 0.125rem;
+  @extend %x-small-text;
+  border-radius: $border-radius;
   display: inline-block;
-  font-size: 0.875rem;
-  line-height: 1.3125rem;
-  padding: calc(#{$sp-unit * 0.625} - 1px) $sph-inner--small * 1;
+  font-weight: 400;
+  font-size: 100px !important;
+  padding: map-get($nudges, nudge--x-small) $sph-inner--small;
   text-align: center;
   text-decoration: none;
 }
