--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
   <head>
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -74,6 +73,7 @@
                 <strong>Base elements</strong>
                 <ul class="p-sidebar-nav__list">
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/base/code/' %}is-active{% endif %}" href="/base/code/">Code</a><div class="p-label--updated u-float-right">Updated</div></li>
+                  <li class="p-sidebar-nav__item u-clearfix"><a class="p-link--soft {% if page.url == '/base/details/' %}is-active{% endif %}" href="/base/details/">Details</a><div class="p-label--new u-float-right">New</div></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/base/forms/' %}is-active{% endif %}" href="/base/forms/">Forms</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/base/reset/' %}is-active{% endif %}" href="/base/reset/">Reset</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/base/tables/' %}is-active{% endif %}" href="/base/tables">Tables</a></li>
