--- a/scss/_base_typography-definitions.scss
+++ b/scss/_base_typography-definitions.scss
@@ -193,6 +193,24 @@
     }
   }
 
+  %x-small-text {
+    display: block;
+    font-size: #{map-get($font-sizes, x-small)}rem;
+    line-height: map-get($line-heights, x-small);
+    margin-bottom: map-get($sp-after, x-small) - map-get($nudges, nudge--small);
+    padding-top: map-get($nudges, nudge--x-small) + map-get($browser-rounding-compensations, small);
+
+    @if ($increase-font-size-on-larger-screens) {
+      @media (min-width: $breakpoint-x-large) {
+        padding-top: map-get($nudges, nudge--small) + map-get($browser-rounding-compensations, small-largescreen);
+      }
+    }
+
+    &.u-no-margin--bottom {
+      @extend %u-no-margin--bottom--small;
+    }
+  }
+
   %muted-heading {
     @extend %small-text;
     color: $color-mid-dark;
