replace calulations with an already existing var that does samething. Expand tick element template

--- a/docs/examples/templates/tick-element-comparison.html
+++ b/docs/examples/templates/tick-element-comparison.html
@@ -5,12 +5,36 @@ category: _templates
 ---
 <div class="p-strip is-shallow u-no-padding--top">
   <div class="row">
-    <p>By default, checkbox and radio labels align with paragraphs.</p>
   </div>
   <div class="row">
     <div class="col-3">
-      <input type="checkbox" id="checkExample1" checked>
-      <label for="checkExample1">Checkbox option 1</label>
+      <form action="">
+        <input type="checkbox" id="checkExample2">
+        <label for="checkExample2">Checkbox option 2</label>
+        <input type="radio" name="RadioOptions" id="Radio1" value="option1" checked>
+        <label for="Radio1">Radio option 1</label>
+      </form>
+    </div>
+    <div class="col-3">
+      <form action="">
+        <input type="text">
+        <button>Button</button>
+      </form>
+    </div>
+    <div class="col-3">
+      <form action="">
+        <input type="text">
+        <input type="checkbox" id="checkExample1" checked>
+        <label for="checkExample1">Checkbox option 1</label>
+      </form>
+    </div>
+    <div class="col-3">
+      <form action="">
+        <input type="text">
+        <select name="" id=""></select>
+      </form>
+    </div>
+    <div class="col-3">
       <input type="checkbox" id="checkExample2">
       <label for="checkExample2">Checkbox option 2</label>
       <input type="radio" name="RadioOptions" id="Radio1" value="option1" checked>
