--- a/scss/_base_forms.scss
+++ b/scss/_base_forms.scss
@@ -164,7 +164,7 @@ $input-margin-bottom: $spv-outer--scaleable - $spv-nudge * 2;
     @include p-max-width;
     cursor: pointer;
     display: block;
-    margin-bottom: $spv-outer--small + $spv-nudge-compensation;
+    margin-bottom: $input-margin-bottom;
     margin-top: 0;
     padding-top: map-get($nudges, nudge--p);
     width: fit-content;
@@ -343,7 +343,7 @@ $input-margin-bottom: $spv-outer--scaleable - $spv-nudge * 2;
   // Textarea styles
   textarea {
     @extend %vf-input-elements;
-    margin-bottom: $spv-outer--scaleable - $spv-nudge * 2;
+    margin-bottom: $input-margin-bottom;
     overflow: auto;
     vertical-align: top;
   }
