--- a/scss/_base_forms.scss
+++ b/scss/_base_forms.scss
@@ -164,7 +164,7 @@ $input-margin-bottom: $spv-outer--scaleable - $spv-nudge * 2;
     @include p-max-width;
     cursor: pointer;
     display: block;
-    margin-bottom: $input-margin-bottom;
+    margin-bottom: $spv-outer--small-scaleable - $spv-nudge;
     margin-top: 0;
     padding-top: map-get($nudges, nudge--p);
     width: fit-content;
