reintroduce mixin wrappers for placeholders to control the order of rules in the generated css

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -19,6 +19,7 @@
   // Reset
   @include vf-b-reset;
   // Base
+  @include vf-b-placeholders;
   @include vf-base-background;
   @include vf-b-typography;
   @include vf-b-blockquotes;
