--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,5 +1,5 @@
 // Base
-@import 'base_placeholders';
+@import 'base_placeholders'; //mandatory import
 @import 'base_typography';
 @import 'base_blockquotes';
 @import 'base_box-sizing';
@@ -19,7 +19,7 @@
   // Reset
   @include vf-b-reset;
   // Base
-  @include vf-b-placeholders;
+  @include vf-b-placeholders; // mandatory include
   @include vf-base-background;
   @include vf-b-typography;
   @include vf-b-blockquotes;
