change light to white in theme naming

--- a/scss/_base_hr.scss
+++ b/scss/_base_hr.scss
@@ -22,12 +22,12 @@
     }
 
     // sass-lint:disable no-qualifying-elements
-    hr.is-white {
-      @extend %hr--white-theme;
+    hr.is-light {
+      @extend %hr--light-theme;
     }
   } @else {
     hr {
-      @extend %hr--white-theme;
+      @extend %hr--light-theme;
     }
 
     // sass-lint:disable no-qualifying-elements
@@ -40,8 +40,8 @@
     background: map-get($colors--dark-theme, border-default);
   }
 
-  %hr--white-theme {
-    background: map-get($colors--white-theme, border-default);
+  %hr--light-theme {
+    background: map-get($colors--light-theme, border-default);
   }
 
   .row.is-bordered {
