--- a/scss/_patterns_strip.scss
+++ b/scss/_patterns_strip.scss
@@ -81,7 +81,7 @@
     background-repeat: no-repeat;
     background-size: cover;
 
-    &.is-white {
+    &.is-light {
       color: $color-x-dark;
     }
 
