--- a/scss/_settings_colors.scss
+++ b/scss/_settings_colors.scss
@@ -35,7 +35,7 @@ $states: (
   information: $color-information
 );
 
-$colors--white-theme: (
+$colors--light-theme: (
   background: #fff,
   background-highlighted: #f7f7f7,
   border-default: #cdcdcd,
