move new color to colors file

--- a/scss/_patterns_label.scss
+++ b/scss/_patterns_label.scss
@@ -23,8 +23,7 @@
 @mixin vf-p-label-validated {
   .p-label--validated {
     @extend %vf-label;
-    $color-validated: #006b75;
-    background-color: $color-validated;
+    background-color: $color-label-validated;
     color: $color-x-light;
   }
 }
