add color to settings file

--- a/scss/_settings_colors.scss
+++ b/scss/_settings_colors.scss
@@ -19,7 +19,7 @@ $color-caution: #f99b11 !default;
 $color-positive: #0e8420 !default;
 $color-information: #335280 !default;
 
-$color-validated: #006b75;
+$color-label-validated: #006b75;
 
 $color-input-shadow: rgba($color-x-dark, 0.12) !default;
 
