delete mixins that dum into the beginning of build.css

--- a/scss/_patterns_icons.scss
+++ b/scss/_patterns_icons.scss
@@ -82,7 +82,8 @@ $color-social-icon-foreground: $color-mid-x-light !default;
 }
 
 @mixin vf-icon-minus($color) {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3E%3Cpath fill='#{vf-url-friendly-color($color)}' d='M0 8.889V7.111h16v1.778z'/%3E%3C/svg%3E");
+  color: red;
+  //background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3E%3Cpath fill='#{vf-url-friendly-color($color)}' d='M0 8.889V7.111h16v1.778z'/%3E%3C/svg%3E");
 }
 
 @mixin vf-icon-expand($color) {
@@ -223,7 +224,7 @@ $color-social-icon-foreground: $color-mid-x-light !default;
 
 @mixin vf-p-icon-minus {
   .p-icon--minus {
-    @extend %icon;
+    // @extend %icon;
     @include vf-icon-minus($color-mid-dark);
 
     [class*='--dark'] &,
