fix icons an markup of examples

--- a/scss/_patterns_icons.scss
+++ b/scss/_patterns_icons.scss
@@ -223,7 +223,7 @@ $color-social-icon-foreground: $color-mid-x-light !default;
 
 @mixin vf-p-icon-minus {
   .p-icon--minus {
-    // @extend %icon;
+    @extend %icon;
     @include vf-icon-minus($color-mid-dark);
 
     [class*='--dark'] &,
