fix botched merge

--- a/scss/_patterns_pagination.scss
+++ b/scss/_patterns_pagination.scss
@@ -9,9 +9,8 @@
     border-style: solid;
     border-width: 1px;
     color: $color-x-dark;
-    display: flex;
-    height: calc(#{2 * $spv-nudge + map-get($line-heights, default-text)});
-    padding: calc(#{$spv-nudge} - 1px) $sph-inner--small;
+    display: block;
+    padding: calc(#{$spv-nudge} - 1px) $sph-inner;
     text-decoration: none;
 
     &.is-disabled {
