fix icon position inside button

--- a/scss/_patterns_buttons.scss
+++ b/scss/_patterns_buttons.scss
@@ -150,6 +150,7 @@
     & [class*='p-icon'] {
       height: map-get($line-heights, default-text); // so height matches that of text inside buttons
       margin-left: -#{$sph-inner--small};
+      top: 0;
 
       // Apply negative margins to make textless button icon a square
       &:only-child {
